@@ -101,9 +101,9 @@ def writev2d(oms, v2dFile):
 	for s in oms['STATION_INFO']:
 		stations.append(s['STATION_ID'][0])
 	stations.sort()
-	stnString = ''
-	for s in stations:
-		stnString = stnString + ' ' + s
+	stnString = stations[0]
+	for s in stations[1:]:
+		stnString = stnString + ', ' + s
 
 	out.write('# base .v2d file autogenerated by oms2v2d operating on file %s\n\n' % omsFile)
 	out.write('vex = %s\n\n' % vexFile)
@@ -135,7 +135,7 @@ if len(argv) < 2:
 prefix = argv[1][0:-4]
 
 omsFile = prefix + '.oms'
-vexFile = prefix + '.skd'
+vexFile = prefix + '.skd.obs'
 v2dFile = prefix + '.v2d'
 
 if argv[1] != omsFile:
